--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <h1>TV Raspored</h1>
     <label for="datum">Datum:</label>
-    <input type="text" id="datum" placeholder="npr. 13.12.2006">
+    <input type="date" id="datum">
     <label for="kanal">Kanal:</label>
     <input type="text" id="kanal" placeholder="npr. HRT 1">
     <label for="pojam">Pojam:</label>
